--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
-    "prettier": "2.8.3"
+    "prettier": "2.8.3",
+    "sass": "^1.57.1"
   }
 }
