--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@mui/icons-material": "^5.11.11",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
     "prettier": "2.8.3",
