--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
       "sizes": "512x512"
     },
     {
-      "src": "maskable_icon.png",
+      "src": "logo512.png",
       "sizes": "any",
       "type": "image/png",
       "purpose": "maskable"
