--- a/manifest.json
+++ b/manifest.json
@@ -2,14 +2,14 @@
   "name": "Mimid",
   "icons": [
     {
-      "src": "logo512.png",
+      "src": "icon512.png",
       "type": "image/png",
       "sizes": "512x512"
     },
     {
-      "src": "logo512.png",
-      "sizes": "any",
+      "src": "maskable_icon.png",
       "type": "image/png",
+      "sizes": "any",
       "purpose": "maskable"
     }
   ],
