--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Mimid",
   "icons": [
     {
-      "src": "original_icon.png",
+      "src": "pp8.png",
       "type": "image/png",
       "sizes": "512x512"
     },
