--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,8 @@
     {
       "src": "pp8.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any"
     },
     {
       "src": "maskable_icon.png",
