--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
       "purpose": "any"
     },
     {
-      "src": "maskable_icon.png",
+      "src": "abc.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "maskable"
