--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,13 @@
   "name": "Mimid",
   "icons": [
     {
-      "src": "pp8.png",
+      "src": "512.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "any"
     },
     {
-      "src": "abc.png",
+      "src": "maskable.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "maskable"
