--- a/manifest.json
+++ b/manifest.json
@@ -2,15 +2,14 @@
   "name": "Mimid",
   "icons": [
     {
-      "src": "512.png",
+      "src": "original_icon.png",
       "type": "image/png",
-      "sizes": "512x512",
-      "purpose": "any"
+      "sizes": "512x512"
     },
     {
-      "src": "maskable.png",
+      "src": "maskable_icon.png",
       "type": "image/png",
-      "sizes": "512x512",
+      "sizes": "any",
       "purpose": "maskable"
     }
   ],
