--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
       "sizes": "512x512"
     },
     {
-      "src": "maskable_icon.png",
+      "src": "test.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "maskable"
