Change font to Poppins

--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/outfit": "^5.0.8",
+    "@fontsource/poppins": "^5.1.1",
     "@mui/material": "^5.14.11",
     "gh-pages": "^5.0.0",
+    "poppins": "^0.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
